<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".HeHuoRenActivity">

    <ImageView
        android:id="@+id/hehuorenyaoqinglan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@mipmap/yaoqinglan"
        android:scaleType="fitXY"
        android:layout_alignParentBottom="true"/>

    <LinearLayout
        android:id="@+id/hehuoren_rl_topview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@mipmap/hehuoren_bg"
        android:orientation="vertical">

        <TextView
            android:id="@+id/hehuoren_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/hehuoren"
            android:textSize="25sp"
            android:textColor="#ffffff"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_gravity="center"
                android:text="@string/today_ticheng"
                android:textSize="15sp"/>
            <TextView
                android:id="@+id/today_ticheng"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_gravity="center"
                android:text="@string/hehuoren_ticheng_num"
                android:textColor="#ffffff"
                android:textSize="30sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_gravity="center"
                android:text="@string/hehuoren_leijiticheng"
                android:textSize="15sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@mipmap/hehuorentexiao_bg"
            android:layout_gravity="bottom"
            android:orientation="horizontal"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hehuoren_tuijian_2ndgrade"
                    android:textSize="15sp"/>

                <TextView
                    android:id="@+id/hehuoren_2ndgrade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textColor="#ffffff"
                    android:text="@string/hehuoren_tuijian_2ndgrade_num"
                    android:textSize="20sp"/>
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="#ffffff"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hehuoren_tuijian_3rdgrade"
                    android:textSize="15sp"/>

                <TextView
                    android:id="@+id/hehuoren_3rdgrade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textColor="#ffffff"
                    android:text="@string/hehuoren_tuijian_3rdgrade_num"
                    android:textSize="20sp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/hehuoren_rl_topview"
        android:layout_above="@id/hehuorenyaoqinglan">

        <TextView
            android:id="@+id/tuijian_hehuoren"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/hehuoren_tuijian_1stgrade"
            android:textSize="20sp"/>
        <ListView
            android:id="@+id/hehuoren_listview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tuijian_hehuoren">
        </ListView>
    </RelativeLayout>
</RelativeLayout>
