<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context=".UsersRegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/register_bg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@mipmap/register_icon"
                android:background="#00000000"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/phone_number"
                    android:textSize="20sp"
                    android:textColor="@color/de_black"/>
                <EditText
                    android:id="@+id/phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="center"
                    android:background="@mipmap/input_btn_bg"
                    android:textCursorDrawable="@null"
                    android:singleLine="true"
                    android:maxLength="11"
                    android:inputType="phone"
                    android:hint="@string/input_phone_number"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/pwd"
                    android:textSize="20sp"
                    android:textColor="@color/de_black"/>
                <EditText
                    android:id="@+id/pwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="center"
                    android:background="@mipmap/input_btn_bg"
                    android:textCursorDrawable="@null"
                    android:singleLine="true"
                    android:maxLength="16"
                    android:inputType="textPassword"
                    android:hint="@string/input_pwd"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/ensure_pwd"
                    android:textSize="20sp"
                    android:textColor="@color/de_black"/>
                <EditText
                    android:id="@+id/ensure_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="center"
                    android:background="@mipmap/input_btn_bg"
                    android:textCursorDrawable="@null"
                    android:singleLine="true"
                    android:maxLength="16"
                    android:inputType="textPassword"
                    android:hint="@string/input_pwda"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/valicode"
                    android:textSize="20sp"
                    android:textColor="@color/de_black"/>
                <EditText
                    android:id="@+id/valicode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="center"
                    android:background="@mipmap/input_btn_bg"
                    android:textCursorDrawable="@null"
                    android:singleLine="true"
                    android:maxLength="6"
                    android:inputType="number"
                    android:hint="@string/input_valicode"/>
                <Button
                    android:id="@+id/getvalicode"
                    android:layout_width="80dp"
                    android:layout_height="38dp"
                    android:background="@drawable/getvalicode_selector"
                    android:layout_marginLeft="-75dp"
                    android:text="@string/get_valicode"
                    android:textSize="12sp"
                    android:textColor="#FF43EC0F"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/tuijianren"
                    android:textSize="20sp"
                    android:textColor="@color/de_black"/>
                <EditText
                    android:id="@+id/tuijianren"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="center"
                    android:background="@mipmap/input_btn_bg"
                    android:textCursorDrawable="@null"
                    android:singleLine="true"
                    android:maxLength="16"
                    android:hint="@string/input_tuijianren"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/agree_protocol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"/>

                <TextView
                    android:id="@+id/protocol_contents"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textColor="@color/de_white"
                    android:text="@string/agree_protocol"/>
            </LinearLayout>

            <Button
                android:id="@+id/ausers_register"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@mipmap/register_btn_bg"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/de_white"
                android:textSize="18sp"
                android:text="@string/register"/>
        </LinearLayout>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/website"
            android:background="#00000000"
            android:layout_margin="20dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>
</RelativeLayout>
