<?xml version="1.0" encoding="utf-8"?>
<RadioGroup
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/radiogroup"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:orientation="horizontal">

    <RadioButton
        android:id="@+id/tabs_rg_shouye"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/bottom_tabs_bg"
        android:checked="true"
        android:button="@null"
        android:layout_gravity="center"
        android:gravity="center"
        android:drawableTop="@drawable/shouye_selector"
        android:text="@string/shouye"
        android:textColor="@color/red"
        android:textSize="13sp"/>

    <RadioButton
        android:id="@+id/tabs_rg_wo"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/bottom_tabs_bg"
        android:button="@null"
        android:layout_gravity="center"
        android:gravity="center"
        android:drawableTop="@drawable/wo_selector"
        android:text="@string/wo"
        android:textColor="@color/yellow"
        android:textSize="13sp"/>

    <RadioButton
        android:id="@+id/tabs_rg_hehuoren"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/bottom_tabs_bg"
        android:button="@null"
        android:layout_gravity="center"
        android:gravity="center"
        android:drawableTop="@drawable/hehuoren_selector"
        android:text="@string/hehuoren"
        android:textColor="@color/yellow"
        android:textSize="13sp"/>

    <RadioButton
        android:id="@+id/tabs_rg_shezhi"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/bottom_tabs_bg"
        android:button="@null"
        android:layout_gravity="center"
        android:gravity="center"
        android:drawableTop="@drawable/shezhi_selector"
        android:text="@string/shezhi"
        android:textColor="@color/yellow"
        android:textSize="13sp"/>
</RadioGroup>
